time-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: time-service
  template:
    metadata:
      labels:
        app: time-service
    spec:
      containers:
      - name: time-container
        image: jabzyt/time-service:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: time-service
spec:
  selector:
    app: time-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
